[package]
name = "adc21"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.17"
timer = "0.2.0"
chrono = "0.4.19"
midir = "0.7.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
pitch_calc = "0.12.0"
log = "0.4.14"
simple_logger = "1.13.0"
